# shared_ynab_agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  log.txt  logging_config.py  main.py  pyproject.toml  pytest.ini
api/: __init__.py  client.py  google_sheets_client.py  ynab_client.py
services/: share_transactions.py  transactions.py
tests/: test_google_sheets_client.py  test_transactions_integration.py  test_transactions_service.py  test_ynab_client.py
